--- a/ChordBox_android/app/src/main/AndroidManifest.xml
+++ b/ChordBox_android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,6 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".AudioRecordTest"/>
+        <activity android:name=".MusicRecordActivity"/>
+
+        <service android:name=".RecordService"/>
     </application>
 
 </manifest>
