FEAT: 음악 페이지에서 음악 재생
TODO
- (-/=5)초 기능 추가하기
- 빨리 감기 버튼에 정지 버튼 구현되어 있으므로 수정 필요

--- a/ChordBox_android/app/src/main/AndroidManifest.xml
+++ b/ChordBox_android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".MusicRecordActivity"/>
 
         <service android:name=".RecordService"/>
+        <service android:name=".MusicService"/>
     </application>
 
 </manifest>
