--- a/ChordBox_android/app/src/main/AndroidManifest.xml
+++ b/ChordBox_android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".AudioRecordTest"/>
         <activity android:name=".MusicRecordActivity"/>
 
-        <service android:name=".RecordService"/>
+        <service android:name=".record.RecordService"/>
         <service android:name=".MusicService"/>
     </application>
 
