TEMP : 비주얼라이저를 위한 audio 추출 과정 중
- 다른 컴퓨터 공유를 위한 푸시

--- a/ChordBox_android/app/src/main/AndroidManifest.xml
+++ b/ChordBox_android/app/src/main/AndroidManifest.xml
@@ -27,10 +27,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".AudioRecordTest"/>
-        <activity android:name=".MusicRecordActivity"/>
+        <activity android:name=".record.MusicRecordActivity"/>
 
         <service android:name=".record.RecordService"/>
-        <service android:name=".MusicService"/>
+        <service android:name=".PlayService"/>
     </application>
 
 </manifest>
