--- a/ChordBox_android/app/build.gradle
+++ b/ChordBox_android/app/build.gradle
@@ -50,11 +50,14 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     def coroutine_version = '1.5.0-native-mt'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     implementation 'com.google.android.exoplayer:exoplayer-core:2.15.0'
+
+    implementation 'com.github.lincollincol:amplituda:2.1.1'
 }
