--- a/ChordBox_android/app/build.gradle
+++ b/ChordBox_android/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
 
     implementation 'com.google.android.exoplayer:exoplayer-core:2.15.0'
 
-    implementation 'com.github.lincollincol:amplituda:2.1.1'
+    //implementation 'com.github.lincollincol:amplituda:2.1.1'
 }
