Fix : 코드 보여주는 뷰 개선
- 코드가 깜박거리면서 보이는 에러 개선

--- a/ChordBox_android/app/build.gradle
+++ b/ChordBox_android/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$version_moshi"
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+
     // FCM
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
