--- a/ChordBox_android/build.gradle
+++ b/ChordBox_android/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version = "1.4.31"
         retrofit_version = "2.9.0"
         version_moshi = '1.11.0'
+        version_room = '2.3.0'
     }
 
     repositories {
