Fix: 녹음 파일 이름 오류 수정 * 녹음 파일 delete 후 ANR 문제 해결

--- a/ChordBox_android/app/src/main/AndroidManifest.xml
+++ b/ChordBox_android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChordBox"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +32,8 @@
         </activity>
         <activity android:name=".record.RecordActivity" />
 
-        <service android:name=".network.ChordFirebaseMessagingService"
+        <service
+            android:name=".network.ChordFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
