--- a/ChordBox_android/app/build.gradle
+++ b/ChordBox_android/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.exoplayer:exoplayer-core:2.15.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.15.1'
     implementation 'com.github.squti:Android-Wave-Recorder:1.6.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
@@ -76,6 +77,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$version_room"
     implementation "androidx.room:room-ktx:$version_room"
 
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     // Test
